# ocaml-solo5

./: .cirrus.yml  Makefile  gen_dot_install.sh  gen_toolchain_tool.sh  ocaml-solo5-cross-aarch64.opam  ocaml-solo5.opam
.github/workflows/: test.yml
example/: dune  dune.inc  dune_gen.ml  main.compilerlibsx86.ml
nolibc/: Makefile  errlist.c  mmap.c  stubs.c
nolibc/include/: errno.h  pthread.h
patches/5.2.0~beta2/: 0001-Add-missing-defined-in-preprocessor-test.patch  0002-Include-config.h-before-HAS_GETTIMEOFDAY-is-tested.patch  0003-Detect-and-use-CC-.-_FOR_BUILD-to-build-sak.patch  0003-Fix-a-pattern-in-configure.patch  0004-Detect-and-use-CC-.-_FOR_BUILD-to-build-sak.patch  0004-Use-target-instead-of-host-to-detect-the-C-toolchain.patch  0005-Use-target-instead-of-host-to-detect-the-C-toolchain.patch  0005-Use-target-instead-of-host-when-relevant-in-configur.patch  0006-SQUASH-Use-target-instead-of-host-when-relevant-in-c.patch  0006-WIP-Use-the-STRIP-command-automatically-detected-by-.patch  0007-Allow-ocaml-as-a-target-OS-to-configure-freestanding.patch  0007-WIP-Use-the-STRIP-command-automatically-detected-by-.patch  0008-Allow-ocaml-as-a-target-OS-to-configure-freestanding.patch  0008-Define-OS-type-to-None.patch  0009-Add-freestanding-targets-to-supported-configurations.patch  0009-Define-OS-type-to-None.patch  0010-Add-freestanding-targets-to-supported-configurations.patch  0010-Check-that-the-configured-and-the-installed-OCaml-ar.patch  0011-Check-that-the-configured-and-the-installed-OCaml-ar.patch  0011-Use-the-target-pkg-config-to-detect-zstd.patch  0012-Use-the-target-pkg-config-to-detect-zstd.patch  0012-WIP-Add-a-Makefile.cross-for-recipes-to-build-a-cros.patch  0013-Set-Max_domains-to-1.patch  0013-WIP-Add-a-Makefile.cross-for-recipes-to-build-a-cros.patch  0014-Set-Max_domains-to-1.patch  0014-Set-stack-as-non-executable-on-freestanding-targets.patch
patches/5.2.0~rc1/: 0001-Add-missing-defined-in-preprocessor-test.patch  0002-Include-config.h-before-HAS_GETTIMEOFDAY-is-tested.patch  0003-Detect-and-use-CC-.-_FOR_BUILD-to-build-sak.patch  0004-Use-target-instead-of-host-to-detect-the-C-toolchain.patch  0005-Use-target-instead-of-host-when-relevant-in-configur.patch  0008-Define-OS-type-to-None.patch  (+8 more)
test/: main.ml
(+23 files in other folders)
