opam-version: "2.0"
maintainer: "Martin Lucina <martin@lucina.net>"
authors: "Martin Lucina <martin@lucina.net>"
homepage: "https://github.com/mirage/ocaml-solo5"
bug-reports: "https://github.com/mirage/ocaml-solo5/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/mirage/ocaml-solo5.git"
build: [
  ["./configure.sh"
   "--prefix=%{prefix}%"
   "--target=x86_64-solo5-none-static" { arch = "x86_64" }
   "--target=aarch64-solo5-none-static" { arch = "arm64" }
   "--ocaml-configure-option=--disable-flat-float-array" {ocaml-option-no-flat-float-array:installed}
   "--ocaml-configure-option=--enable-flambda" {ocaml-option-flambda:installed}
  ]
  [make "-j%{jobs}%"]
  [make "%{name}%.install"]
]
run-test: [
  [make "test"]
]
depends: [
  "conf-git" {build} # to patch the compiler sources
  "conf-pkg-config" {build} # to detect how to link with zstd
  "ocamlfind" {build} # needed by dune context (for tests)
  "ocaml-base-compiler" {= "5.2.0~rc1"} | "ocaml-variants" {= "5.2.0~rc1+options"}
  "solo5" {>= "0.8.0"}
]
conflicts: [
  "sexplib" {= "v0.9.0"}
  "solo5-kernel-ukvm"
  "solo5-kernel-virtio"
  "solo5-kernel-muen"
]
available: [
  ((os = "linux" & (arch = "x86_64" | arch = "arm64"))
  | (os = "freebsd" & arch = "x86_64")
  | (os = "openbsd" & arch = "x86_64"))
]
synopsis: "OCaml cross-compiler to the freestanding Solo5 backend"
description:
  "This package provides a OCaml cross-compiler, suitable for linking with a Solo5 unikernel."
extra-source "ocaml-src.tar.gz" {
  src: "https://github.com/ocaml/ocaml/archive/5.2.0-rc1.tar.gz"
  checksum:
    "sha256=2573928dfd5399b2fdb629bfce844b12e68475bb431c2a96a9c8e72a419da029"
}
