(executable
 (name dune_gen)
 (modules dune_gen))

(rule
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   dune.inc
   (run ./dune_gen.exe))))

(include dune.inc)

(library
 (name solo5os)
 (modules)
 (foreign_stubs
  (language c)
  (names startup manifest)))

(rule
 (targets manifest.c)
 (deps manifest.json)
 (action
  (run solo5-elftool gen-manifest manifest.json manifest.c)))

(alias
 (name default)
 (enabled_if
  (= %{context_name} solo5))
 (deps
  (alias_rec all)))
